--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
                                 <!-- FACEBOOK-->
                                 <a href="https://www.facebook.com/brooks.riekhof" id="first_one"
                                     class="social btn-floating indigo"><i class="fa fa-facebook"></i></a>
+                                    <!-- GITHUB -->
                                 <a href="https://github.com/Rbriekhof" id="first_one"
                                     class="social btn-floating grey"><i class="fa fa-github"></i></a>
                                 <!-- TWITTER-->
@@ -231,9 +232,8 @@
                         <div id="about-btn" class="card-action">
                             <div class="about-btn">
                                 <!-- DOWNLOAD CV BUTTON -->
-                                <!-- <a href="#" class="btn waves-effect">Download Resume</a> -->
+                                <a href="/images/profile/PlaceholderResume.docx.pdf" download="Resume" class="btn waves-effect">Download Resume</a>
 
-                                
                                 <!-- CONTACT BUTTON -->
                                 <a href="#contact" class="btn waves-effect">Contact Me</a>
                             </div>
@@ -813,6 +813,16 @@
                             </figure>
                         </div>
                         <!--CATEGORY CONTENT FIVE SMALL-->
+                        <div class="col-md-4 col-sm-6 col-xs-12 grid inRight">
+                            <figure class="port-effect-up">
+                                <img src="images/portfolios/Friendfind.png" class="img-responsive" alt="portfolio-demo" />
+                                <figcaption>
+                                    <h2>Friend <span> Finder</span></h2>
+                                    <p>Match Make with your soulmate</p>
+                                    <a href="https://murmuring-harbor-29621.herokuapp.com/">View more</a>
+                                </figcaption>
+                            </figure>
+                        </div>
                     </div>
                 </div>
                 <!--PORTFOLIOS ADD GALLERY BUTTON-->
@@ -842,10 +852,7 @@
                 <!--INTEREST TEXT-->
                 <div class="card-content">
                     <p>
-                        First of all I love music, country music is my favorite. Love watching
-                        football, movies and playing games with my buddies. I spend quite a lot of time
-                        in traveling and photography, these keeps me fresh for working environment.
-                        I also spend time volunteering at the Red Cross in London, UK each month.
+                       
                     </p>
                 </div>
 
