--- a/index.html
+++ b/index.html
@@ -823,6 +823,16 @@
                                 </figcaption>
                             </figure>
                         </div>
+                        <div class="col-md-4 col-sm-6 col-xs-12 grid inLeft">
+                            <figure class="port-effect-up">
+                                <img src="images/portfolios/NKC Neighborhoods.PNG" class="img-responsive" alt="portfolio-demo" />
+                                <figcaption>
+                                    <h2>NKC <span> Neighborhoods</span></h2>
+                                    <p>Find the right place to live</p>
+                                    <a href="https://projectdeux.herokuapp.com/">View more</a>
+                                </figcaption>
+                            </figure>
+                        </div>
                     </div>
                 </div>
                 <!--PORTFOLIOS ADD GALLERY BUTTON-->
