--- a/index.html
+++ b/index.html
@@ -833,6 +833,16 @@
                                 </figcaption>
                             </figure>
                         </div>
+                        <div class="col-md-4 col-sm-6 col-xs-12 grid inLeft">
+                            <figure class="port-effect-up">
+                                <img src="images/portfolios/Products.PNG" class="img-responsive" alt="portfolio-demo" />
+                                <figcaption>
+                                    <h2>Bamazon </h2>
+                                    <p>Order Products using Mysql and Node</p>
+                                    <a href="https://rbriekhof.github.io/Bamazonmysql/">View more</a>
+                                </figcaption>
+                            </figure>
+                        </div>
                     </div>
                 </div>
                 <!--PORTFOLIOS ADD GALLERY BUTTON-->
