updated portfolio again

--- a/index.html
+++ b/index.html
@@ -823,6 +823,7 @@
                                 </figcaption>
                             </figure>
                         </div>
+                        <!--CATEGORY CONTENT SIX SMALL-->
                         <div class="col-md-4 col-sm-6 col-xs-12 grid inLeft">
                             <figure class="port-effect-up">
                                 <img src="images/portfolios/NKC Neighborhoods.PNG" class="img-responsive" alt="portfolio-demo" />
@@ -833,6 +834,7 @@
                                 </figcaption>
                             </figure>
                         </div>
+                        <!--CATEGORY CONTENT SEVEN SMALL-->
                         <div class="col-md-4 col-sm-6 col-xs-12 grid inLeft">
                             <figure class="port-effect-up">
                                 <img src="images/portfolios/Products.PNG" class="img-responsive" alt="portfolio-demo" />
@@ -840,6 +842,17 @@
                                     <h2>Bamazon </h2>
                                     <p>Order Products using Mysql and Node</p>
                                     <a href="https://rbriekhof.github.io/Bamazonmysql/">View more</a>
+                                </figcaption>
+                            </figure>
+                        </div>
+                        <!--CATEGORY CONTENT EIGHT SMALL-->
+                        <div class="col-md-4 col-sm-6 col-xs-12 grid inLeft">
+                            <figure class="port-effect-up">
+                                <img src="images/portfolios/ClickyGame.PNG" class="img-responsive" alt="portfolio-demo" />
+                                <figcaption>
+                                    <h2>Super Clicky Game </h2>
+                                    <p>Play a Simple Memory Based Star Wars Game</p>
+                                    <a href="https://rbriekhof.github.io/Super-Clicky-Game/">View more</a>
                                 </figcaption>
                             </figure>
                         </div>
